--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,9 +2,11 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-  - bases/ingress.pomerium.io_pomerium.yaml
+- bases/ingress.pomerium.io_pomerium.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-  - kustomizeconfig.yaml
+- kustomizeconfig.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
