--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,7 +1,11 @@
 namespace: pomerium
-commonLabels:
-  app.kubernetes.io/name: pomerium
-bases:
-  - ../crd
-  - ../pomerium
-  - ../gen_secrets
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- ../crd
+- ../pomerium
+- ../gen_secrets
+labels:
+- includeSelectors: true
+  pairs:
+    app.kubernetes.io/name: pomerium
