--- a/config/gen_secrets/kustomization.yaml
+++ b/config/gen_secrets/kustomization.yaml
@@ -1,6 +1,8 @@
 namespace: pomerium
 resources:
-  - job.yaml
-  - role_binding.yaml
-  - role.yaml
-  - service_account.yaml
+- job.yaml
+- role_binding.yaml
+- role.yaml
+- service_account.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
