--- a/config/stress-test/kustomization.yaml
+++ b/config/stress-test/kustomization.yaml
@@ -1,9 +1,13 @@
 namespace: pomerium-stress-test
-commonLabels:
-  app.kubernetes.io/name: pomerium-stress-test
 resources:
-  - namespace.yaml
-  - ./rbac
-  - config.yaml
-  - deployment.yaml
-  - service.yaml
+- namespace.yaml
+- ./rbac
+- config.yaml
+- deployment.yaml
+- service.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+labels:
+- includeSelectors: true
+  pairs:
+    app.kubernetes.io/name: pomerium-stress-test
