--- a/config/pomerium/deployment/kustomization.yaml
+++ b/config/pomerium/deployment/kustomization.yaml
@@ -1,10 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-  - base.yaml
-patchesStrategicMerge:
-  - args.yaml
-  - image.yaml
-  - ports.yaml
-  - resources.yaml
-  - no-root.yaml
-  - readonly-root-fs.yaml
-  #- healthchecks.yaml
+- base.yaml
+patches:
+- path: args.yaml
+- path: image.yaml
+- path: ports.yaml
+- path: resources.yaml
+- path: no-root.yaml
+- path: readonly-root-fs.yaml
