--- a/config/pomerium/service/kustomization.yaml
+++ b/config/pomerium/service/kustomization.yaml
@@ -1,3 +1,5 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-  - proxy.yaml
-  - metrics.yaml
+- proxy.yaml
+- metrics.yaml
