--- a/deployment.yaml
+++ b/deployment.yaml
@@ -629,7 +629,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
+        image: pomerium/ingress-controller:0-24-0
         imagePullPolicy: Always
         name: pomerium
         ports:
