ci: use standard runners

--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -10,8 +10,7 @@ on:
 jobs:
   backport:
     runs-on:
-      group: large-runners
-      labels: linux
+      group: ubuntu-latest
     name: Backport
     steps:
       - name: Generate token
