--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,7 @@ on:
 jobs:
   pre-commit:
     runs-on:
-      group: large-runners
-      labels: linux
+      group: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
@@ -35,8 +34,7 @@ jobs:
 
   test:
     runs-on:
-      group: large-runners
-      labels: linux
+      group: ubuntu-latest
     steps:
       - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe
         with:
@@ -71,8 +69,7 @@ jobs:
 
   build:
     runs-on:
-      group: large-runners
-      labels: linux
+      group: ubuntu-latest
     steps:
       - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe
         with:
@@ -94,8 +91,7 @@ jobs:
 
   build-docker:
     runs-on:
-      group: large-runners
-      labels: linux
+      group: ubuntu-latest
     steps:
       - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
       - name: build
