--- a/.github/workflows/docker-version-branches.yaml
+++ b/.github/workflows/docker-version-branches.yaml
@@ -45,8 +45,8 @@ jobs:
           TARGET=linux-arm64 scripts/get-envoy.bash
           make pomerium-ui generate fmt vet
           mkdir -p bin-amd64 bin-arm64
-          GOARCH=amd64 go build -tags embed_pomerium -o bin-amd64/manager main.go
-          GOARCH=arm64 go build -tags embed_pomerium -o bin-arm64/manager main.go
+          GOARCH=amd64 go build `make version-flags` -tags embed_pomerium -o bin-amd64/manager main.go
+          GOARCH=arm64 go build `make version-flags` -tags embed_pomerium -o bin-arm64/manager main.go
 
       - name: Docker Publish - Version Branches
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56
