--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -2,7 +2,7 @@
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 FROM gcr.io/distroless/base-debian12:debug-nonroot@sha256:8548e3041a2cc583998c6a6beabf13ae93e6b006a5f6a6194966b4327ea741f5
 ARG TARGETARCH
-COPY bin-$TARGETARCH/manager /manager
+COPY bin/manager-linux-$TARGETARCH /manager
 USER 65532:65532
 
 ENTRYPOINT ["/manager"]
