--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,10 @@ repos:
         args: ["deployment"]
         types: ["yaml"]
         pass_filenames: false
+      - id: generate-mocks
+        name: generate-mocks
+        language: system
+        entry: make
+        args: ["generate-mocks"]
+        types: ["go"]
+        pass_filenames: false
