--- a/.github/workflows/update-core.yaml
+++ b/.github/workflows/update-core.yaml
@@ -2,7 +2,8 @@ name: Update Core to Latest Commit
 
 on:
   schedule:
-    - cron: '0 0 * * *' # every day at midnight
+    - cron: '40 1 * * *'
+  workflow_dispatch:
 
 jobs:
   update-pomerium-core:
@@ -24,7 +25,7 @@ jobs:
           git config --global user.email "apparitor@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
           git add go.mod go.sum
-          git diff --cached --exit-code || echo echo "changed=true" >> $GITHUB_OUTPUT
+          git diff --cached --exit-code || echo "changed=true" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         if: ${{ steps.git-diff.outputs.changed }} == 'true'
