--- a/config/crd/bases/ingress.pomerium.io_pomerium.yaml
+++ b/config/crd/bases/ingress.pomerium.io_pomerium.yaml
@@ -234,6 +234,12 @@ spec:
                 items:
                   type: string
                 type: array
+              runtimeFlags:
+                additionalProperties:
+                  type: boolean
+                description: RuntimeFlags sets the <a href="https://www.pomerium.com/docs/reference/runtime-flags">runtime
+                  flags</a> to enable/disable certain features.
+                type: object
               secrets:
                 description: "Secrets references a Secret with Pomerium bootstrap
                   parameters.\n\n\n<p>\n<ul>\n\t<li><a href=\"https://pomerium.com/docs/reference/shared-secret\"><code>shared_secret</code></a>\n\t\t-
