deployment: set proxy service externalTrafficPolicy: Local

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -568,6 +568,7 @@ metadata:
   name: pomerium-proxy
   namespace: pomerium
 spec:
+  externalTrafficPolicy: Local
   ports:
   - name: https
     port: 443
