--- a/deployment.yaml
+++ b/deployment.yaml
@@ -619,8 +619,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
-        imagePullPolicy: Always
+        image: pomerium/ingress-controller:v0.27.0
+        imagePullPolicy: IfNotPresent
         name: pomerium
         ports:
         - containerPort: 8443
