--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -19,7 +19,7 @@ words:
   - sslkey
   - sslrootcert
   - uifs
-  - unmarshalled
+  - unmarshaled
   - upsert
 languageSettings:
   - languageId: go
